[feet]: added test send before bulk-send
